# vl-investimentos

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
application/: __init__.py  settings.py
application/server/: factory.py  run.py
libs/basic_types/: textual.py
src/investiments/entities/: investiments.py
src/investiments/value_objects/: assets.py
src/message_bus/: commands.py  events.py
src/wallet/domain/commands/: investments.py
src/wallet/domain/entities/: investments.py
src/wallet/domain/value_objects/: assets.py
src/wallet/entrypoints/: investments.py  schemas.py
tests/src/wallet/domain/entities/: test_investiments.py
tests/src/wallet/domain/value_objects/: test_assets.py
