[tool.poetry]
name = "vl-investimentos"
version = "0.1.0"
description = ""
authors = ["Vinícius Lins <viniciusaclins@gmail.com>"]
readme = "README.md"
packages = [{include = "vl_investimentos"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
pre-commit = "^3.7.0"

[tool.ruff]
indent-width = 4
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "site-packages",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
